# my_cas.rs

./: Cargo.toml  README.md  generated_code.rs  generated_code_simple.rs  libgenerated_code.dylib  pend.jl  reg.jl  rlc.cir  rust_simple.csv  simple.csv
c/: ark_analytic_nonlin_stats.csv  dae.c  ode.c  solution.txt
src/: lib.rs  main.rs  main2.rs
src/old/: main3.rs  main_4.rs
tests/: test.rs
