[package]
name = "my_cas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cvode-wrap = "0.1.3"
diffeq = "0.1.0"
itertools = "0.11.0"
libloading = "0.8.0"
ndarray = "0.15.6"
num-traits = "0.2.16"
petgraph = "0.6.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.183"
serde_json = "1.0.105"
sundials-sys = "0.2.5"

[dev-dependencies]
csv = "1.2.2"
